# ash-docs

./: .gitignore  00-conventions.txt  01-vision.txt  02-decisions.txt  03-directory.txt  04-pillars.txt  05-phase-00-skeleton.txt  06-phase-01-renderer.txt  07-phase-02-world.txt  08-phase-03-rexpaint.txt  09-phase-04-editor.txt  10-phase-05-input.txt  11-phase-06-character.txt  12-phase-07-combat.txt  13-phase-08-npc.txt  14-phase-09-quests.txt  15-phase-10-save.txt  16-phase-11-polish.txt  17-phase-12-scoured-coast.txt  18-phase-13-glasswood.txt  19-phase-14-riven-spire.txt  20-phase-15-ash-plains.txt  21-phase-16-hollow-cities.txt  22-phase-17-main-quest.txt  23-phase-18-factions.txt  24-phase-19-side-quests.txt  25-phase-20-books.txt  26-phase-21-items.txt  27-phase-22-bestiary.txt  28-phase-23-release.txt  README.md  index.txt
projects/ash/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
projects/ash/.github/workflows/: build.yml
projects/ash/cmake/: CPM.cmake  CompilerWarnings.cmake
projects/ash/content/: README.md
projects/ash/content/bestiary/: README.md
projects/ash/content/books/: README.md
projects/ash/content/factions/: README.md  cartographers.json  coastal_watch.json  quiet_choir.json  sky_smiths.json
projects/ash/content/items/: README.md  armor.json  weapons.json
projects/ash/content/quests/: README.md
projects/ash/content/regions/: ash_plains.json  glasswood.json  hollow_cities.json  riven_spire.json  scoured_coast.json
projects/ash/content/shaders/: README.md
projects/ash/docs/: README.md  architecture.md  code-style.md  content-style-guide.md
projects/ash/scripts/: ci-build.sh  profile.sh  run.sh
projects/ash/src/: main.cpp
projects/ash/src/app/: app.cpp  app.hpp  cli.cpp  cli.hpp  ui_loop.cpp  ui_loop.hpp
projects/ash/src/character/: attributes.cpp  attributes.hpp  condition.cpp  condition.hpp  derived.cpp  derived.hpp  equipment.cpp  equipment.hpp  inventory.cpp  inventory.hpp  leveling.cpp  leveling.hpp  skills.cpp  skills.hpp
projects/ash/src/combat/: ai.cpp  ai.hpp  armor.cpp  armor.hpp  attack.cpp  attack.hpp  combat.cpp  combat.hpp  cover.cpp  cover.hpp  damage.cpp  damage.hpp  json_mini.cpp  json_mini.hpp  line_of_sight.cpp  line_of_sight.hpp  path.cpp  path.hpp  status.cpp  status.hpp  weapon.cpp  weapon.hpp
projects/ash/src/content/: content.cpp  content.hpp
projects/ash/src/core/: ids.cpp  ids.hpp  json.cpp  json.hpp  log.cpp  log.hpp  math.cpp  math.hpp  path.cpp  path.hpp  rng.cpp  rng.hpp  string_util.cpp  string_util.hpp  time.cpp  time.hpp  version.cpp  version.hpp
projects/ash/src/dialogue/: dlg_ast.cpp  dlg_ast.hpp  dlg_eval.cpp  dlg_eval.hpp  dlg_lexer.cpp  dlg_lexer.hpp  dlg_parser.cpp  dlg_parser.hpp  dlg_skill_check.cpp  dlg_skill_check.hpp
projects/ash/src/editor/: clipboard.cpp  clipboard.hpp  editor.cpp  editor.hpp  map.cpp  map.hpp  map_io.cpp  map_io.hpp  tool_entity.cpp  tool_entity.hpp  tool_fill.cpp  tool_fill.hpp  tool_paint.cpp  tool_paint.hpp  tool_pick.cpp  tool_pick.hpp  tool_select.cpp  tool_select.hpp  tool_warp.cpp  tool_warp.hpp  undo.cpp  undo.hpp
projects/ash/src/input/: input.cpp  input.hpp  key.cpp  key.hpp  keybinds.cpp  keybinds.hpp  mouse.cpp  mouse.hpp
projects/ash/src/npc/: dialogue_run.cpp  dialogue_run.hpp  disposition.cpp  disposition.hpp  faction.cpp  faction.hpp  npc.cpp  npc.hpp  schedule.cpp  schedule.hpp
projects/ash/src/platform/: signal.cpp  signal.hpp
projects/ash/src/quest/: consequence.cpp  consequence.hpp  flag_store.cpp  flag_store.hpp  journal.cpp  journal.hpp  qst_ast.cpp  qst_ast.hpp  qst_engine.cpp  qst_engine.hpp  qst_parser.cpp  qst_parser.hpp
projects/ash/src/render/: animation.cpp  animation.hpp  ansi.cpp  ansi.hpp  buffer.cpp  buffer.hpp  buffer_diff.cpp  buffer_diff.hpp  buffer_emit.cpp  buffer_emit.hpp  camera.cpp  camera.hpp  cell.cpp  cell.hpp  compositor.cpp  compositor.hpp  font_metrics.cpp  font_metrics.hpp  light.cpp  light.hpp  palette.cpp  palette.hpp  terminal.cpp  terminal.hpp
projects/ash/src/rexpaint/: layer_spec.cpp  layer_spec.hpp  xp_format.cpp  xp_format.hpp  xp_loader.cpp  xp_loader.hpp  xp_writer.cpp  xp_writer.hpp
projects/ash/src/save/: autosave.cpp  autosave.hpp  load.cpp  load.hpp  migrate.cpp  migrate.hpp  save.cpp  save.hpp  save_data.hpp  schema_v0.cpp  schema_v0.hpp
projects/ash/src/settings/: accessibility.cpp  accessibility.hpp  settings.cpp  settings.hpp
projects/ash/src/ui/: barter_ui.cpp  barter_ui.hpp  book_ui.cpp  book_ui.hpp  character_ui.cpp  character_ui.hpp  dialogue_ui.cpp  dialogue_ui.hpp  hud.cpp  hud.hpp  input_event.hpp  inventory_ui.cpp  inventory_ui.hpp  journal_ui.cpp  journal_ui.hpp  map_ui.cpp  map_ui.hpp  menu.cpp  menu.hpp  mode.cpp  mode.hpp  mode_stack.cpp  mode_stack.hpp  screen.cpp  screen.hpp  screen_context.cpp  screen_context.hpp  spell_ui.cpp  spell_ui.hpp  widgets.cpp  widgets.hpp
projects/ash/src/world/: components.cpp  components.hpp  map.cpp  map.hpp  query.cpp  query.hpp  spawn.cpp  spawn.hpp  tile_flags.hpp  trigger.cpp  trigger.hpp  world.cpp  world.hpp
projects/ash/tests/: CMakeLists.txt  test_harness.hpp  test_main.cpp
projects/ash/tests/character/: test_attributes.cpp  test_derived.cpp  test_equipment.cpp  test_inventory.cpp  test_skills.cpp
projects/ash/tests/combat/: test_ai.cpp  test_attack.cpp  test_cover.cpp  test_damage.cpp  test_frame_budget.cpp  test_los.cpp  test_path.cpp  test_status.cpp
projects/ash/tests/content/: test_content_load.cpp
projects/ash/tests/dialogue/: test_dlg_eval.cpp  test_dlg_lexer.cpp  test_dlg_parser.cpp
projects/ash/tests/editor/: test_clipboard.cpp  test_undo.cpp
projects/ash/tests/input/: test_key.cpp  test_keybinds.cpp
projects/ash/tests/npc/: test_dialogue_run.cpp  test_disposition.cpp  test_schedule.cpp
projects/ash/tests/quest/: test_flag_store.cpp  test_qst_engine.cpp  test_qst_parser.cpp
projects/ash/tests/render/: test_animation.cpp  test_ansi.cpp  test_buffer.cpp  test_camera.cpp  test_cell.cpp  test_compositor.cpp  test_light.cpp
projects/ash/tests/rexpaint/: test_layer_spec.cpp  (+2 more)
(+46 files in other folders)
